# prisma-langgraphed

./: .env.example  .gitignore  AGENT.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CODEBASE_AUDIT.md  Dockerfile  README.md  conftest.py  docker-compose.observability.yml  docker-compose.yml  langgraph.json  main.py  pyproject.toml
docs/: phase37_38_architecture.md
observability/: __init__.py  tracing.py
otel/: Dockerfile  collector-config.yaml  collector.config.yaml.j2  generate_config.py
scripts/: create_mock_data.py  run_mock_pipeline.py  smoke_analyze.py  smoke_test.py  verify_tracing.py
src/: __init__.py  api.py  config.py  observability.py
src/backends/: azure.py  base.py  factory.py  local.py  qdrant.py
src/core/: asta_client.py  causal_model.py  checkpointer.py  decision_projection.py  evidence_model.py  investigation.py  investment_timeline.py  llm_utils.py  output_schemas.py  report_assembler.py  report_charts.py  report_renderer.py  research_utils.py  rubric_evaluator.py  science_investigator.py  telemetry.py  tool_tracing.py
src/core/agents/: asta.py  deep_web.py  edison.py  lbd.py  openalex.py  slr.py
src/graph/: evidence_audit.py  gs_verifier.py  state.py  workflow.py
src/graph/agents/: deep_web_graph.py  edison_graph.py  lbd_graph.py  slr_graph.py
src/graph/nodes/: analyze.py  approve_report.py  deliver.py  finalize.py  load_collection.py  precheck.py  prepare_research.py  rerender.py  research.py  review_research_plan.py
src/graph/subgraphs/: analyze.py  causal.py  deep_web.py  edison.py  lbd.py  research.py  slr.py
src/prompts/: __init__.py  analyze_prompts.py  causal_prompts.py  report_prompts.py  research_prompts.py  tool_prompts.py
src/tools/: collection_tools.py  investigation_tools.py  literature_tools.py  narration_tools.py  science_tools.py
studio/: analyze-mock-input.json  causal-mock-input.json  deep-web-agent-mock-input.json  evidence-audit-mock-input.json  gs-verifier-mock-input.json  research-mock-input.json  slr-agent-mock-input.json  workflow-mock-input.json  workflow-vdev-input.json
tests/: test_analyze_dry_run.py  test_api.py  test_asyncio_policy.py  test_checkpointer.py  test_config.py  test_evidence_audit.py  test_graph_integrity.py  test_gs_verifier.py  test_node_contracts.py  test_parallel_nodes.py  test_tool_tracing.py  test_workflow.py
tests/core/: test_causal_model.py  test_decision_projection.py  test_investigation.py  test_report_charts.py  test_report_renderer.py  test_rubric_evaluator.py  test_science_investigator.py
tests/core/agents/: test_asta.py  test_deep_web.py  test_edison.py  test_lbd.py  test_slr.py
tests/fixtures/agent_mock_inputs/: edison_agent_mock_input.json  lbd_agent_mock_input.json
tests/graph/agents/: test_deep_web_graph.py  test_edison_graph.py  test_lbd_graph.py  test_slr_graph.py
tests/nodes/: test_analyze.py  test_approve_report.py  test_deliver.py  test_finalize.py  test_load_collection.py  test_precheck.py  test_prepare_research.py  test_research.py  test_review_research_plan.py
tests/subgraphs/: test_analyze.py  test_causal.py  test_deep_web.py  test_edison.py  test_lbd.py  test_research.py  test_slr.py
tests/tools/: test_collection_tools.py  test_investigation_tools.py  test_narration_tools.py  test_science_tools.py
verification/: CONTRACTS.md  CONTROL_FLOW.md  FINDINGS.md  MAPPING.md  STATE_AUDIT.md
(+2 files in other folders)
